[metadata]
name = blockout
author = Marlin Forbes
author-email = marlinf@datashaman.com
summary = Automate block management on Twitter
long_description = file: README.md
long_description_content_type = text/markdown
home-page = https://github.com/datashaman/blockout
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet
    Topic :: Utilities
keywords =
    block
    spam
    twitter

[entry_points]
console_scripts =
    blockout = blockout.cli:main

[files]
data_files =
    share/blockout = etc/config.py.dist
packages =
    blockout
